fix maximized map overflow

--- a/webroot/css/frontend.css
+++ b/webroot/css/frontend.css
@@ -191,9 +191,10 @@ span.dpn {
 
 .maximized #map {
 	position: fixed !important;
-	width: 100%;
+	width: calc(100% - 300px);
 	height: 100%;
 	z-index: 1;
+	margin-left: 300px;
 }
 
 .maximized gray {
